# GrabCut

./: BorderMatting.cpp  BorderMatting.h  CMakeLists.txt  CutGraph.cpp  CutGraph.h  GCApplication.cpp  GCApplication.h  GMM.cpp  GMM.h  GrabCut.cpp  GrabCut.h  README.md  main.cpp
